--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(SoftRendering
 	"src/global.h"
 	"src/vector.h"
+	"src/matrix.h"
 	"src/camera.h"
 	"src/main.cpp"
 )
